# Machine-Learning-Cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  minimumDistanceClassifier.cpp  minimumDistanceClassifier.h  multilinear_regression.hpp  tree.txt
Classifiers/Minimum Distance Classifier/: main.cpp  makefile  minimumDistanceClassifier.cpp  minimumDistanceClassifier.h  training_data.txt
Clustering/: cluster.cpp  cluster.h  cluster.tpp  distance.h  hierarchical_cluster.cpp  hierarchical_cluster.h  main.cpp
Dimensionality Reduction/: PCA.cpp  main.cpp
Dimensionality Reduction/PCA/: PCA.h
Model validation/Confusion Matrix/: ConfusionMatrix.cpp  ConfusionMatrix.h  KMeans.cpp  KMeans.h  main.cpp  makefile
Model validation/PAC-Learning/: Concept.h
PAC-Learning/: Concept.cpp  Concept.h  main.cpp
Regression/Linear Regression/: Plotting.h  data.csv  linear_regression.cpp  linear_regression.h  lr  main.cpp  makefile
Regression/Logistic regression/: logistic_regression.cpp  logistic_regression.h
Supervised Learning/Classifiers/K-Nearest neighbours/: knn.cpp  knn.h  main.cpp  makefile  training_data.txt
Supervised Learning/Classifiers/LDA/: LDA.cpp  LDA.h
Supervised Learning/Classifiers/Logistic regression/: Makefile  main.cpp
Supervised Learning/Classifiers/Minimum Distance Classifier/: makefile  minimumDistanceClassifier.cpp  minimumDistanceClassifier.h  training_data.txt
Supervised Learning/Classifiers/Support Vector Machine/: SVM.cpp  SVM.h
Supervised Learning/Decision Trees/Basic example/: DecisionTree.cpp  DecisionTree.h
Unsupervised Learning/Decision Trees/: DecisionTree.h
Unsupervised Learning/Decision Trees/Basic example/: DecisionTree.cpp
Unsupervised Learning/Hierarchical Clustering/: HierarchicalClustering.cpp  HierarchicalClustering.h  main.cpp
Unsupervised Learning/K-Means/: K-Means.h  KMeans.cpp  KMeans.h  data.csv  kmeans  main.cpp  makefile
cmake/: mlppConfig.cmake.in
include/: defines.hpp  mlpp.h  plotting.h
include/Classification/: SVM.h  mdc.h
include/Decision Trees/: decision_tree.h
include/Losses/: loss_functions.hpp
include/Model Validation/: concept.h  confusion_matrix.h  metrics.h  roc_curve.hpp  roc_curve.inl  stratified_kfold.hpp  stratified_kfold.inl
include/Supervised Learning/Classification/: LDA.h  LDA.inl
include/Supervised Learning/Classifiers/: LDA.h  LDA.inl  MDC.inl  QDA.h  QDA.inl  SVM.h  SVM.inl  logistic_regression.h  logistic_regression.inl  rhks_kernels.hpp
include/Supervised Learning/Clustering/: distance.h  hierarchical_cluster.h  hierarchical_clustering.h
include/Supervised Learning/Decision Trees/: decision_tree.h  decision_tree.inl
include/Supervised Learning/K-Means/: KMeans.h
include/Supervised Learning/Regression/: linear_regression.h  linear_regression.hpp  linear_regression.inl  logistic_regression.h  logistic_regression.inl  multilinear_regression.inl  polynomial_regression.hpp  polynomial_regression.inl  ridge_regression.h  ridge_regression.inl
include/Unsupervised Learning/Clustering/: cluster.h  cluster.hpp  cluster.inl  clustering_attributes.cpp  clustering_attributes.hpp  clustering_attributes.inl  clustering_dataset.hpp  clustering_dataset.inl  distance.h
include/Unsupervised Learning/Dimensionality Reduction/: PCA.inl  SVD.h  SVD.inl
src/: main.cpp
src/Classification/: LDA.cpp  SVM.cpp  mdc.cpp
src/Clustering/: hierarchical_cluster.cpp
src/Clustering/K-Means/: KMeans.cpp
src/Model Validation/: concept.cpp  confusion_matrix.cpp
src/Supervised Learning/Clustering/: cluster.tpp
src/Supervised Learning/Decision Trees/: decision_tree.cpp
src/Supervised Learning/KNN/: knn.cpp
src/Supervised Learning/Regression/: linear_regression.cpp
src/Unsupervised Learning/Clustering/: cluster.tpp  hierarchical_clustering.cpp
(+25 files in other folders)
